<resources>
    <string name="app_name">Lesson 2</string>
    <string name="tempCurr">-11\u00B0</string>
    <string name="tempDay">-7\u00B0</string>
    <string name="tempNight">-16\u00B0</string>
    <string name="dayNight">-7\u00B0 / -16\u00B0</string>
    <string name="sky">Cloudy</string>
    <string name="city_default">Moscow</string>
    <string name="reload">Updated: 15 min ago</string>
    <string name="vendor">JopaWeather</string>
    <string name="time_now">Сейчас</string>
    <string name="time_14">14:00</string>
    <string name="time_15">15:00</string>
    <string name="time_16">16:00</string>
    <string name="time_17">17:00</string>
    <string name="time_18">18:00</string>
    <string name="time_19">19:00</string>
    <string name="time_20">20:00</string>
    <string name="day0">Вс, 15 дек.</string>
    <string name="day1">Пн, 16 дек.</string>
    <string name="day2">Вт, 17 дек.</string>
    <string name="day3">Ср, 18 дек.</string>
    <string name="day4">Чт, 19 дек.</string>
    <string name="day5">Пт, 20 дек.</string>
    <string name="humidity">Humidity</string>
    <string name="humidity_value">80%</string>
    <string name="wind">Wind</string>
    <string name="direction">Direction</string>
    <string name="direction_value">N-W</string>
    <string name="Speed">Speed</string>
    <string name="speed_value">3–5 m/s</string>

    <string name="city1">Moscow</string>
<!--    <string name="city2">Saint-Petersburg</string>-->
<!--    <string name="city3">Novosibirsk</string>-->
<!--    <string name="city4">Saratov</string>-->

    <string name="city1_temp">-5°</string>
    <string name="city1_temp_day">-2°</string>
    <string name="city1_temp_night">-8°</string>


<!--    <string name="city2_temp">-6°</string>-->
<!--    <string name="city2_temp_day">-3°</string>-->
<!--    <string name="city2_temp_night">-9°</string>-->

<!--    <string name="city3_temp">-11°</string>-->
<!--    <string name="city3_temp_day">-8°</string>-->
<!--    <string name="city3_temp_night">-14°</string>-->

<!--    <string name="city4_temp">-16°</string>-->
<!--    <string name="city4_temp_day">-13°</string>-->
<!--    <string name="city4_temp_night">-19°</string>-->

    <string name="cities">Cities</string>
    <string name="addCity">Add city</string>
    <string name="cancel">Cancel</string>
    <string name="settings">Settings</string>
    <string name="authors">Authors</string>
    <string name="main">Main</string>
    <string name="back">Back</string>
    <string name="exit">Exit</string>
    <string name="add">+</string>
    <string name="rain">Rain</string>
    <string name="cloudy">Cloudy</string>
    <string name="sunny">Sunny</string>
    <string name="snow">Snow</string>
    <string name="enter_city">Enter city</string>
    <string name="find">Find</string>
    <string name="theme">Theme</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="wind_speed">Wind speed</string>
</resources>
