<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <FrameLayout
        android:id="@+id/recycler_item__city_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        android:paddingEnd="10dp">

        <TextView
            android:id="@+id/recycler_item_city_city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:textColor="@color/colorMain"
            android:textSize="25sp"
            android:text="@string/city1"
            android:paddingTop="16dp"/>

        <TextView
            android:id="@+id/recycler_item_city_temp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:paddingTop="5dp"
            android:paddingBottom="20dp"
            android:textColor="@color/colorMain"
            android:textSize="30sp"
            android:text="@string/city1_temp" />

        <TextView
            android:id="@+id/recycler_item_city_temp_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/city1_temp_day"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/recycler_item_city_temp_night"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/city1_temp_night"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/recycler_item_city_weather"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:paddingEnd="10dp"
            android:paddingBottom="5dp"
            android:textColor="@color/colorMain"
            android:textSize="14sp"
            android:text="@string/rain" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorBack"
            android:layout_gravity="bottom"/>
    </FrameLayout>

</LinearLayout>