<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SettingsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp">

        <ImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:paddingTop="15dp"
            android:paddingBottom="8dp"
            android:src="@drawable/back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@color/colorMain"
            android:layout_marginTop="10dp"
            android:layout_marginStart="5dp"
            android:textSize="20sp"
            android:text="@string/settings"/>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="10dp"
            android:paddingEnd="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorMain"
                android:text="@string/theme"/>

            <RadioGroup
                android:id="@+id/settings_theme"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingStart="20dp">

                <RadioButton
                    android:id="@+id/settings_theme_dark"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dark"
                    android:textColor="@color/colorMain"
                    android:buttonTint="@color/colorMain" />

                <RadioButton
                    android:id="@+id/settings_theme_light"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/light"
                    android:textColor="@color/colorMain"
                    android:buttonTint="@color/colorMain"/>
            </RadioGroup>

            <CheckBox
                android:id="@+id/settings_humidity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/humidity"
                android:textColor="@color/colorMain"
                android:buttonTint="@color/colorMain"
                android:checked="true"/>

            <CheckBox
                android:id="@+id/settings_wind"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/wind_speed"
                android:backgroundTint="@color/colorMain"
                android:textColor="@color/colorMain"
                android:buttonTint="@color/colorMain"
                android:checked="true"/>
        </LinearLayout>
    </ScrollView>

</LinearLayout>