<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sky"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp">

        <ImageView
            android:id="@+id/cityList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:paddingTop="15dp"
            android:paddingBottom="12dp"
            android:src="@drawable/back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorMain"
            android:paddingTop="10dp"
            android:paddingStart="55dp"
            android:textSize="20sp"
            android:text="@string/settings"/>
    </FrameLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="10dp"
            android:paddingEnd="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorMain"
                    android:text="@string/theme"/>

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingStart="20dp">

                    <RadioButton
                        android:id="@+id/btn1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/dark"
                        android:textColor="@color/colorMain"
                        android:buttonTint="@color/colorMain" />

                    <RadioButton
                        android:id="@+id/btn2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/light"
                        android:textColor="@color/colorMain"
                        android:buttonTint="@color/colorMain"/>
                </RadioGroup>

                <CheckBox
                    android:id="@+id/humidity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/humidity"
                    android:textColor="@color/colorMain"
                    android:buttonTint="@color/colorMain"/>

                <CheckBox
                    android:id="@+id/wind"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/wind_speed"
                    android:backgroundTint="@color/colorMain"
                    android:textColor="@color/colorMain"
                    android:buttonTint="@color/colorMain"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>