<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".MainFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:paddingTop="5dp"
        android:weightSum="10">

        <ImageView
            android:id="@+id/changeCity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:src="@drawable/city"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/fragment_main_city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/city_default"
            android:textColor="@color/colorMain"
            android:textSize="30sp"
            android:layout_weight="8" />

        <ImageView
            android:id="@+id/settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:paddingStart="15dp"
            android:paddingTop="8dp"
            android:paddingEnd="15dp"
            android:paddingBottom="8dp"
            android:src="@drawable/preferences"
            android:layout_weight="1" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="30dp">

                <TextView
                    android:id="@+id/fragment_main_temp_curr"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/tempCurr"
                    android:textColor="@color/colorMain"
                    android:textSize="100sp" />

                <TextView
                    android:id="@+id/fragment_main_weather"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingBottom="10dp"
                    android:text="@string/sky"
                    android:textColor="@color/colorMain"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/fragment_main_temp_day"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="-7"
                        android:textColor="@color/colorMain"
                        android:textSize="20sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"
                        android:text="/"
                        android:textColor="@color/colorMain"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/fragment_main_temp_night"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="-11"
                        android:textColor="@color/colorMain"
                        android:textSize="20sp" />
                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingBottom="3dp"
                android:weightSum="10">

                <TextView
                    android:id="@+id/reload"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:text="@string/reload"
                    android:textColor="@color/colorBack"
                    android:textSize="12sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:src="@drawable/logo"/>

                    <TextView
                        android:id="@+id/vendor"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:paddingStart="5dp"
                        android:paddingEnd="0dp"
                        android:text="@string/vendor"
                        android:textColor="@color/colorBack"
                        android:textSize="12sp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@color/colorBack"
                android:orientation="horizontal"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view_time"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" >

            </androidx.recyclerview.widget.RecyclerView>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view_day"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" >

            </androidx.recyclerview.widget.RecyclerView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="10"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp">

                <LinearLayout
                    android:id="@+id/fragment_main_humidity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="6">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorMain"
                        android:text="@string/humidity"
                        android:textSize="16sp"
                        android:layout_marginBottom="10dp"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorMain"
                        android:text="@string/humidity_value"
                        android:textSize="40sp"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/fragment_main_wind"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="4">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorMain"
                        android:text="@string/wind"
                        android:textSize="16sp"
                        android:layout_marginBottom="10dp"
                        android:gravity="left"/>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:layout_marginEnd="20dp">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textColor="@color/colorMain"
                                android:text="@string/direction"
                                android:textSize="16sp"
                                android:layout_marginBottom="5dp"
                                android:gravity="start"/>

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textColor="@color/colorMain"
                                android:text="@string/Speed"
                                android:textSize="16sp"
                                android:gravity="start"/>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textColor="@color/colorMain"
                                android:text="@string/direction_value"
                                android:textSize="16sp"
                                android:layout_marginBottom="5dp"
                                android:gravity="start"/>

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textColor="@color/colorMain"
                                android:text="@string/speed_value"
                                android:textSize="16sp"
                                android:gravity="start"/>
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>